Changed the categories a little bit

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,9 @@ function isActive(path) {
           <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
             <a href="/blog" class={`block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ${isActive('/blog') ? 'bg-gray-100' : ''}`} role="menuitem">All Posts</a>
             <a href="/blog/category/gaussian-splatting" class={`block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ${isActive('/blog/category/gaussian-splatting') ? 'bg-gray-100' : ''}`} role="menuitem">Gaussian Splatting</a>
-            <a href="/blog/category/machine-learning" class={`block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ${isActive('/blog/category/machine-learning') ? 'bg-gray-100' : ''}`} role="menuitem">Machine Learning</a>
+            <a href="/blog/category/computer-vision" class={`block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ${isActive('/blog/category/computer-vision') ? 'bg-gray-100' : ''}`} role="menuitem">Computer Vision</a>
+            <a href="/blog/category/robotics" class={`block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ${isActive('/blog/category/machine-learning') ? 'bg-gray-100' : ''}`} role="menuitem">Robotics</a>
+          </div>
           </div>
         </div>
       </div>
