--- a/src/pages/blog/category/computer-vision.astro
+++ b/src/pages/blog/category/computer-vision.astro
@@ -38,7 +38,7 @@ const tags = [...new Set(computerVisionPosts.flatMap(post => post.data.tags))];
     <div id="posts-count" class="mb-4 text-gray-600"></div>
 
     <div id="blogPosts" class="grid gap-8 md:grid-cols-2">
-      {roboticsPosts.map((post) => <BlogPost post={post} />)}
+      {computerVisionPosts.map((post) => <BlogPost post={post} />)}
     </div>
   </div>
 
